@@ -1,3 +1,12 @@
+2011-02-03  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-sh.el (tramp-remote-path): Add default settings for
+	`tramp-default-remote-path' to the docstring.
+	(tramp-get-remote-path): Suppress error message when `getconf
+	PATH' fails.
+
+	* tramp-smb.el (tramp-smb-errors): Add "NT_STATUS_UNSUCCESSFUL".
+
 2011-01-10  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-default-method): Initialize with pscp/plink only
